Add ability to delete bu schedule
